--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-markdown": "^9.0.0",
     "react-redux": "^8.1.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
