--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.0",
     "react-redux": "^8.1.2",
+    "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.1",
     "typescript": "5.2.2",
