--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cssmolecule": "^1.0.1",
     "custom-bs": "^1.3.0",
     "js-cookie": "^3.0.5",
+    "lodash.isequal": "^4.5.0",
     "next": "^13.5.6",
     "pdfequips-navbar": "^3.0.38",
     "pdfjs-dist": "^3.8.162",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-syntax-highlighter": "^15.5.9",
     "next-transpile-modules": "^10.0.1",
