--- a/package.json
+++ b/package.json
@@ -10,27 +10,36 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@reduxjs/toolkit": "^2.4.0",
+    "@primer/octicons-react": "^19.21.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.13.5",
     "astro-seo-schema": "^5.0.0",
     "fetch-subscription-status": "^3.0.4",
     "js-cookie": "^3.0.5",
+    "katex": "^0.16.27",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.555.0",
     "pdfequips-footer": "^0.1.12",
     "pdfequips-navbar": "^3.6.18",
     "pdfjs-dist": "^4.9.155",
+    "react-ace": "^14.0.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-bootstrap": "^2.10.6",
+    "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
     "react-dropzone": "^14.3.5",
+    "react-markdown": "^10.1.0",
     "react-range-slider-input": "^3.2.1",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-select": "^5.8.3",
+    "react-syntax-highlighter": "^16.1.0",
+    "react-tabs": "^6.1.0",
     "react-tabs-scrollable": "^1.0.7",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "recharts": "^3.3.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "schema-dts": "^1.1.2",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.7.2"
