--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.13.5",
     "astro-seo-schema": "^5.0.0",
+    "dompurify": "^3.3.1",
     "fetch-subscription-status": "^3.0.4",
     "js-cookie": "^3.0.5",
     "katex": "^0.16.27",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.555.0",
+    "marked": "^17.0.1",
     "pdfequips-navbar": "^3.6.18",
     "pdfjs-dist": "^4.9.155",
     "react-ace": "^14.0.1",
