--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro-seo-schema": "^5.0.0",
     "dompurify": "^3.3.1",
     "fetch-subscription-status": "^3.0.4",
+    "isomorphic-dompurify": "^2.35.0",
     "js-cookie": "^3.0.5",
     "katex": "^0.16.27",
     "lodash.isequal": "^4.5.0",
